[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/globin-right.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://player/globin-left.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="player" type="Spatial" groups=["player"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )
script = ExtResource( 2 )

[node name="Sprite pivot" type="Spatial" parent="."]
transform = Transform( 1.6, 0, 0, 0, 1.6, 0, 0, 0, 1, -0.0999212, 0.00837302, -0.0125802 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Sprite pivot"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.426, 0 )
frames = SubResource( 1 )
playing = true

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="LaneTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="LaneTimer" to="." method="_on_LaneTimer_timeout"]
